@@ -29,7 +29,6 @@ import bb
 from bb import data
 from bb.fetch import Fetch
 from bb.fetch import FetchError
-from bb.fetch import MissingParameterError
 from bb.fetch import runfetchcmd
 
 class Bzr(Fetch):
