@@ -22,8 +22,8 @@ Message handling infrastructure for bitbake
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-import sys, os, re, bb
-from bb import utils, event
+import sys, bb
+from bb import event
 
 debug_level = {}
 
