@@ -23,8 +23,7 @@ Task data collection and handling
 # with this program; if not, write to the Free Software Foundation, Inc.,
 # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 
-from bb import data, event, mkdirhier, utils
-import bb, os
+import bb
 
 class TaskData:
     """
